# js_docker_repro

./: BUILD.bazel  README.md  WORKSPACE  index.html  pnpm-lock.yaml  tailwind.config.js
